test/spec_vectors/block/fail/module_21.wat
(module (func $type-value-nums-vs-void (block (i32.const 1) (i32.const 2))))